infrastructure/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-api-service
  namespace: default
  labels:
    app: flux-api
spec:
  type: ClusterIP
  selector:
    app: flux-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
